internal/config/testdata/invalid-config/AppAPICredentials.hjson
{
  APIAppCredentials:
  {
    ClientID: ""
    ClientSecret: ""
  }
  Account: youremail@domain.com
  SecretsBackendType: auto
  Jobs:
  [
    {
      SourceFolder: ./testdata
      MakeAlbums:
      {
        Enabled: true
        Use: folderName
      }
      DeleteAfterUpload: false
      IncludePatterns: []
      ExcludePatterns: []
    }
  ]
}